fix: hide scrollbar

--- a/css/blocks/scroll.css
+++ b/css/blocks/scroll.css
@@ -13,7 +13,7 @@
     min-height: 250px;
 
 
-    overflow-x: auto;
+    overflow-x: hidden;
     overflow-y: hidden;
 
 
@@ -46,7 +46,7 @@
         min-height: 100px;
 
 
-        overflow-x: auto;
+        overflow-x: hidden;
         overflow-y: hidden;
 
 
@@ -78,7 +78,7 @@
     min-height: 100px;
 
 
-    overflow-x: auto;
+    overflow-x: hidden;
     overflow-y: hidden;
 
 
